--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,15 @@ html, body {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+#main-project-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#main-project-container > * {
+    margin: 30px 30px;
+}
+
 /* Modal Content */
 #modal-content-bt-override {
     background-color: #fefefe;
