--- a/css/project_template.css
+++ b/css/project_template.css
@@ -92,3 +92,18 @@ li:hover span {
 .empty-li {
 	height: 10px;
 }
+
+.list-title {
+	text-align: center;
+}
+
+h1 .fa-trash {
+	float: right;
+	font-size: 24px;
+	opacity: 0.7;
+	margin: auto;
+}
+
+h1 .fa-trash:hover {
+	opacity: 1;
+}
