--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -5,11 +5,18 @@ body {
 		font-family: 'Lato', sans-serif;
 		color: white;
 		height: 100%;
-		width: 100%;
+        margin: 0;
 }
 
 html {
-	height: 100%;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+}
+
+.jumbotron p {
+    margin: 0 auto;
+    left: 50%;
 }
 
 #content {
@@ -29,26 +36,57 @@ h1 {
 }
 
 hr {
-	width: 50%;
+    margin-top: 8%;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-footer {
-    font-size: 16px;
-    background-color: black;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    position: fixed;
-    height : 40px;
-    margin-top : 40px;
-}
-
-footer p {
-    margin-top: 10px;
-}
-
 .navbar {
-    background: black;
+    background: #f8f9fa;
+    -webkit-box-shadow:0px 1px 1px #f8f8f8;
+    -moz-box-shadow:0px 1px 1px #f8f8f8;
+    box-shadow:0px 1px 1px #f8f8f8;
+}
+
+
+.item-1, 
+.item-2, 
+.item-3 {
+	position: absolute;
+    display: block;
+    width: 50%;
+    font-size: 2em;
+	animation-duration: 15s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+
+.item-1{
+	animation-name: anim-1;
+}
+
+.item-2{
+	animation-name: anim-2;
+}
+
+.item-3{
+	animation-name: anim-3;
+}
+
+@keyframes anim-1 {
+	0%, 8.3% { left: -100%; opacity: 0; }
+      8.3%,25% { left: 25%; opacity: 1; }
+      33.33%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-2 {
+	0%, 33.33% { left: -100%; opacity: 0; }
+      41.63%, 58.29% { left: 25%; opacity: 1; }
+      66.66%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-3 {
+	0%, 66.66% { left: -100%; opacity: 0; }
+      74.96%, 91.62% { left: 25%; opacity: 1; }
+      100% { left: 110%; opacity: 0; }
 }
