--- a/css/project_template.css
+++ b/css/project_template.css
@@ -93,8 +93,10 @@ p {
     width: 50%;
 }
 
-.row {
+#main-project-container .row {
 	width: 90%;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 .empty-li {
@@ -131,4 +133,17 @@ h1 .fa-trash:hover {
 
 #current-project-title {
 	margin-left: 10px;
+}
+
+#add-new-list-container {
+	width: 90%;
+	text-align: center;
+}
+
+#new-project-primary {
+	background-color: #2980b9;
+	border: 1px solid #2980b9;
+	min-width: 200px;
+	max-width: 25%;
+	margin-left: -15px;
 }
