--- a/css/project_template.css
+++ b/css/project_template.css
@@ -107,14 +107,13 @@ p {
 	text-align: center;
 }
 
-h1 .fa-trash {
-	float: right;
+h1 .fa {
 	font-size: 16px;
 	opacity: 0.7;
 	margin: auto;
 }
 
-h1 .fa-trash:hover {
+h1 .fa :hover {
 	opacity: 1;
 }
 
