--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,11 +1,14 @@
 body {
-		background: url(https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48fe9f87e4a3344a46e80ddf5c3bdfa6&auto=format&fit=crop&w=1350&q=80);
-		background-size: cover;
-		background-position: center;
+		background: url("https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48fe9f87e4a3344a46e80ddf5c3bdfa6&auto=format&fit=crop&w=1350&q=80") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 		font-family: 'Lato', sans-serif;
 		color: white;
 		height: 100%;
         margin: 0;
+
 }
 
 html {
