Add ejs as project viewengine

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
     <script src="../js/index.js" type="module"></script>
 </head>
 <body>
-    <div data-filepath="header.html"></div>
+    <% include ../partials/header %>
     <div id="main-project-container" class="container" ></div>
 
     <!-- The Modal -->
@@ -40,6 +40,6 @@
     </div>
 
     </div>
-    <div data-filepath="footer.html"></div>
+    <% include ../partials/footer %>
 </body>
 </html>
