--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -15,10 +15,6 @@ html {
     overflow-y: scroll;
 }
 
-.row .container {
-    padding-top: 10%;
-}
-
 .row .container .well {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 6px;
@@ -33,9 +29,6 @@ html {
 }
 
 #content {
-    margin: auto;
-    width: 70%;
-    padding-top: 10%;
     text-align: center;
 }
 
@@ -84,6 +77,12 @@ hr {
 
 .item-3{
 	animation-name: anim-3;
+}
+
+#auth-message {
+    height: 50px;
+    text-align: center;
+    width: 100%;
 }
 
 #animate-text-container {
