--- a/views/pages/landing-page.ejs
+++ b/views/pages/landing-page.ejs
@@ -38,6 +38,18 @@
 	<div id="content" class="container">
         <div class="jumbotron">
           <h1 class="display-4">Welcome to TRELOLO!</h1>
+          <div id="auth-message" class="container">
+            <% if(error && error.length > 0){ %>
+                <div class="alert alert-danger" role="alert">
+                    <%= error %>
+                </div>
+            <% } %>
+            <% if(success && success.length > 0){ %>
+                <div class="alert alert-success" role="alert">
+                    <%= success %>
+                </div>
+            <% } %>
+          </div>
           <div id="animate-text-container">
             <p class="item-1">Work more efficiently.</p>
             <p class="item-2">Plan your projects in a simple way.</p>
