--- a/views/pages/landing-page.ejs
+++ b/views/pages/landing-page.ejs
@@ -29,8 +29,8 @@
     			<li class="active"><a href="/home">My projects</a></li>
      		</ul>
     		<ul class="nav navbar-nav navbar-right">
-     		    <li><a href="/register">Sign Up <i class="fas fa-user-plus"></i></a></li>
-     		    <li><a href="/login">Login <i class="fas fa-user"></i></a></li>
+     		    <li><a href="/register"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+     		    <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
      		</ul>
    		  </div>
   		</div>
@@ -61,10 +61,6 @@
           </p>
         </div>
 	</div>
-	<footer class="footer">
-    <div class="footer-copyright text-center py-3">
-        <p>Copyright @ Trelolo Team Codecool Cracow 2018</p>
-    </div>
-    </footer>
+  <% include ../partials/footer %>
 </body>
 </html>
