--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -26,8 +26,8 @@
     			<li class="active"><a href="/home">My projects</a></li>
      		</ul>
     		<ul class="nav navbar-nav navbar-right">
-     		    <li><a href="/register">Sign Up <i class="fas fa-user-plus"></i></a></li>
-     		    <li><a href="/login">Login <i class="fas fa-user"></i></a></li>
+     		    <li><a href="/register"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+     		    <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
      		</ul>
    		  </div>
   		</div>
