Fix min width of field on edit to 200px

--- a/css/index.css
+++ b/css/index.css
@@ -129,5 +129,6 @@ a.navbar-brand:hover {
 [contenteditable="true"]{
     border: 2px solid rgb(231, 76, 60);
     background-color: rgb(243, 188, 154);
-    width: 100%;
+    display: inline-block;
+    min-width: 200px;
 }
