--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,22 @@
 <footer class="footer">
-    <div class="footer-copyright text-center py-3">
-        Copyright @ Trelolo Team Codecool Cracow 2018
+    <div class="footer-top">
+      <div class="row text-center">
+        <div class="col-lg-2 col-md-offset-1 col-xs-12 text-center">
+            <a href="https://www.linkedin.com/in/anna-le%C5%9Bniak-90b3b5166/" target="_blank"><i class="fab fa-linkedin"></i> Ania</a>
+        </div>
+        <div class="col-lg-2 col-md-offset-1 col-xs-12 text-center">
+            <a href="https://www.linkedin.com/in/kamil-boksa-b80869166/" target="_blank"><i class="fab fa-linkedin"></i> Kamil</a>
+         </div>
+          <div class="col-lg-2 col-md-offset-1 col-xs-12 text-center">
+             <a href="https://github.com/Leanka/Trello" target="_blank"><i class="fab fa-github"></i> Github</a>
+         </div>
+      </div> 
+    </div>
+    <div class="copyrights">
+     <div class="row text-center">
+     	<p>Copyright © Trelolo Team 2018 All rights reserved</p>
+     </div>
     </div>
 </footer>
+
 
