--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -6,16 +6,18 @@ body {
         background-size: cover;
 		font-family: 'Lato', sans-serif;
 		color: white;
-		height: 100%;
+		min-height: 100%;
         margin: 0;
 
 }
 
 html {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     position: fixed;
     overflow-y: scroll;
+    overflow-x: hidden;
+    display: block;
 }
 
 .row .container .well {
@@ -61,7 +63,7 @@ hr {
 .item-1, 
 .item-2, 
 .item-3 {
-	position: absolute;
+	position: fixed;
     display: block;
     width: 50%;
     font-size: 2em;
