--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -33,11 +33,12 @@ html {
     font-size: 20px;
 }
 
-#content {
+.content {
     text-align: center;
+    padding-top: 20px;
 }
 
-#content .jumbotron {
+.content .jumbotron {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -82,6 +83,10 @@ hr {
 
 .item-3{
 	animation-name: anim-3;
+}
+
+.login-register {
+    margin: 5px 10px;
 }
 
 #auth-message {
