--- a/views/pages/landing-page.ejs
+++ b/views/pages/landing-page.ejs
@@ -1,41 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Trelolo</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-	<link rel="stylesheet" type="text/css" href="../css/landing-page.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="../css/footer.css" />
-	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script defer type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="../js/landing.js" type="module"></script>
-</head>
-<body>
-  	<nav class="navbar navbar-default">
- 		  <div class="container">
-   				<div class="navbar-header">
-    		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-       		 			<span class="icon-bar"></span>
-     				</button>
-     				 <a class="navbar-brand" href="../">Trelolo</a>
-   				 </div>
-  		  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    		<ul class="nav navbar-nav">
-    			<li class="active"><a href="/home">My projects</a></li>
-     		</ul>
-    		<ul class="nav navbar-nav navbar-right">
-     		    <li><a href="/register"><i class="fas fa-user-plus"></i> Sign Up</a></li>
-     		    <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
-     		</ul>
-   		  </div>
-  		</div>
-	</nav>
-	<div id="content" class="container">
+  <% include ../partials/landing-header %>
+	<div class="content container">
         <div class="jumbotron">
           <h1 class="display-4">Welcome to TRELOLO!</h1>
           <div id="auth-message" class="container">
@@ -62,5 +26,3 @@
         </div>
 	</div>
   <% include ../partials/footer %>
-</body>
-</html>
