Change footer styling

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,23 +1,37 @@
-    <footer class="footer">
+    <div id="footer-container">
+           <footer class="footer">
         <div class="footer-top">
-          <div class="row text-center">
-            <div class="col-sm text-center">
-                <a href="https://www.linkedin.com/in/anna-le%C5%9Bniak-90b3b5166/" target="_blank"><i class="fab fa-linkedin"></i> Ania</a>
+            <div class="row text-center">
+                <div class="list-group col-sm text-center">
+                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex w-100 justify-content-between">
+                    </div>
+                    <p class="mb-1">The project was created solely for educational purposes, it is not aimed at commercial activities.</p>
+                    </a>
+                </div>
+                <ul class="list-group col-sm text-center">
+                    <li class="list-group-item">
+                        <p>Links</p>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="https://www.linkedin.com/in/anna-le%C5%9Bniak-90b3b5166/" target="_blank"><i class="fab fa-linkedin"></i> Ania</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="https://www.linkedin.com/in/kamil-boksa-b80869166/" target="_blank"><i class="fab fa-linkedin"></i> Kamil</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="https://github.com/Leanka/Trello" target="_blank"><i class="fab fa-github"></i> Github</a>
+                    </li>
+                </ul> 
             </div>
-            <div class="col-sm text-center">
-                <a href="https://www.linkedin.com/in/kamil-boksa-b80869166/" target="_blank"><i class="fab fa-linkedin"></i> Kamil</a>
-             </div>
-              <div class="col-sm text-center">
-                 <a href="https://github.com/Leanka/Trello" target="_blank"><i class="fab fa-github"></i> Github</a>
-             </div>
-          </div> 
-        </div>
+        </div> 
         <div class="copyrights">
          <div class="row text-center">
          	<div id="copyrights-text" class="col-sm">Copyright © Trelolo Team 2018 All rights reserved</div>
          </div>
         </div>
-    </footer>
+    </footer> 
+    </div>
   </body>
 </html>
 
