--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0px;
   min-height: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 #new-project-button {
     margin-right: 1%;
@@ -39,6 +40,7 @@ html, body {
 #main-project-container {
     display: flex;
     flex-wrap: wrap;
+    height: 100%;
 }
 
 #main-project-container > * {
