--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,26 +1,24 @@
+html, body {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    position: absolute;
+}
+
+
 body {
-		background: url("https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48fe9f87e4a3344a46e80ddf5c3bdfa6&auto=format&fit=crop&w=1350&q=80") no-repeat center center fixed;
+		font-family: 'Lato', sans-serif;
+		color: white;
+        background: url("https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48fe9f87e4a3344a46e80ddf5c3bdfa6&auto=format&fit=crop&w=1350&q=80") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-		font-family: 'Lato', sans-serif;
-		color: white;
-		min-height: 100%;
-        margin: 0;
-
+        overflow-y: scroll;
 }
 
-html {
-    min-height: 100%;
-    width: 100%;
-    position: fixed;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    display: block;
-}
-
-.row .container .well {
+.container .well {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -36,6 +34,7 @@ html {
 .content {
     text-align: center;
     padding-top: 20px;
+    height: 100%;
 }
 
 .content .jumbotron {
@@ -64,7 +63,7 @@ hr {
 .item-1, 
 .item-2, 
 .item-3 {
-	position: fixed;
+	position: absolute;
     display: block;
     width: 50%;
     font-size: 2em;
