--- a/views/pages/landing-page.ejs
+++ b/views/pages/landing-page.ejs
@@ -14,10 +14,12 @@
                 </div>
             <% } %>
           </div>
-          <div id="animate-text-container">
-            <p class="item-1">Work more efficiently.</p>
-            <p class="item-2">Plan your projects in a simple way.</p>
-            <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
+          <div class="container">
+            <div id="animate-text-container">
+              <p class="item-1">Work more efficiently.</p>
+              <p class="item-2">Plan your projects in a simple way.</p>
+              <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
+            </div>
           </div>
           <p class="lead">
             <hr class="my-4">
@@ -25,4 +27,5 @@
           </p>
         </div>
 	</div>
-  <% include ../partials/footer %>
+	<% include ../partials/footer %>
+  
