--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,7 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     height: 100%;
+    min-height: 720px;
 }
 
 #main-project-container > * {
